# 30_ReviewApp

backend/: .gitignore  README.md  dependencies.py  main.py  pyproject.toml
backend/core/: config.py
backend/db/: executions.py
backend/domain/: executions.py
backend/my_logging/: logger.py
backend/routers/: executions.py
backend/schemas/: api_schemas.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/app/(root)/: layout.tsx  page.tsx
frontend/app/(root)/execution/: page.tsx
frontend/components/: HeaderBox.tsx  RightSideBar.tsx
frontend/components/execution/: ExecutionCalendar.tsx  ExecutionEmailReader.tsx
frontend/components/ui/: button.tsx  calendar.tsx  chart.tsx  textbox.tsx
frontend/constants/: index.ts
frontend/lib/: api_prefix.ts  types.ts  utils.ts
